--- a/Presentation/Pages/Admin/Route.cshtml
+++ b/Presentation/Pages/Admin/Route.cshtml
@@ -121,8 +121,9 @@
                     <div class="col-sm-9">
                         <select class="form-control form-control-lg" id="CreateRoute-origin">
                             @foreach (var item in Model.Airports){
-                                <option>@item.AirportId - 
-                                 @item.AirportName</option>
+                                <option value="@item.AirportId">@item.AirportId - 
+                                    @item.AirportName
+                                </option>
                             }
                         </select>
                     </div>    
@@ -132,24 +133,27 @@
                     <div class="col-sm-9">
                         <select class="form-control form-control-lg" id="CreateRoute-destination">
                             @foreach (var item in Model.Airports){
-                                <option>@item.AirportId - 
-                                 @item.AirportName</option>
+                                <option value="@item.AirportId">@item.AirportId - 
+                                    @item.AirportName
+                                </option>
                             }
                         </select>
+                        <span style="color:red" id="err-airport-create" class="hidden-class">Do not duplicate the airport</span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-sm-6">
                         <label class="col-sm-3 col-form-label">Hours</label>
                         <div class="col-sm-9">
-                            <input id="CreatePlane-hour" type="number" class="form-control" value="0" min="0" max="24" >
+                            <input id="CreateRoute-hour" type="number" class="form-control" value="0" min="0" max="24" >
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <label class="col-sm-3 col-form-label">Minutes</label>
                         <div class="col-sm-9">
-                            <input id="CreatePlane-minute" type="number" class="form-control" value="0"  min="0" max="59" >
+                            <input id="CreateRoute-minute" type="number" class="form-control" value="0"  min="0" max="59" >
                         </div>
+                        <span class="hidden-class" id="err-time-create" style="color:red">Please choose your time</span>
                     </div>
                 </div>
                 <button id="btsubmitCreateRoute" type="submit" class="btn btn-success mr-2" ><b>Create</b></button>
@@ -174,42 +178,48 @@
                     <div class="col-sm-9">
                         <select class="form-control form-control-lg" id="EditRoute-origin">
                             @foreach (var item in Model.Airports){
-                                <option>@item.AirportId - 
-                                 @item.AirportName</option>
+                                <option value="@item.AirportId">
+                                    @item.AirportId - 
+                                    @item.AirportName
+                                </option>
                             }
                         </select>
                     </div>    
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-3 col-form-label">Destination</label>
+                    <input type="hidden" class="hidden-id"/>
                     <div class="col-sm-9">
                         <select class="form-control form-control-lg" id="EditRoute-destination">
                             @foreach (var item in Model.Airports){
-                                <option>@item.AirportId - 
-                                 @item.AirportName</option>
+                                <option value="@item.AirportId">
+                                    @item.AirportId - 
+                                    @item.AirportName
+                                </option>
                             }
                         </select>
+                        <span style="color:red" id="err-airport" class="hidden-class">Do not duplicate the airport!</span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-sm-6">
                         <label class="col-sm-3 col-form-label">Hours</label>
                         <div class="col-sm-9">
-                            <input id="EditPlane-hour" type="number" class="form-control" value="0" min="0" max="24" >
+                            <input id="EditRoute-hour" type="number" class="form-control" value="0" min="0" max="24" >
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <label class="col-sm-3 col-form-label">Minutes</label>
                         <div class="col-sm-9">
-                            <input id="EditPlane-minute" type="number" class="form-control" value="0"  min="0" max="59" >
+                            <input id="EditRoute-minute" type="number" class="form-control" value="0"  min="0" max="59" >
                         </div>
+                        <span class="hidden-class" id="err-time" style="color:red">Please choose your time</span>
                     </div>
                 </div>
                 <button id="btsubmitEditRoute" type="submit" class="btn btn-success mr-2" ><b>Update</b></button>
                 <button class="btn btn-light" data-dismiss="modal"><b>Cancel</b></button>
             </form>
-		  </div>
-    </div> 
-  </div>
+            </div>
+        </div> 
+    </div>
 </div>
-
