updating admin employee

--- a/Presentation/Pages/Admin/Employee.cshtml
+++ b/Presentation/Pages/Admin/Employee.cshtml
@@ -250,8 +250,8 @@
                   <label class="col-sm-3 col-form-label">Status</label>
                   <div class="col-sm-9">
                     <select id="CreateEmployee-status" class="form-control">
-                      <option>Active</option>
-                      <option>Disable</option>
+                      <option>AVALABLE</option>
+                      <option>DISABLED</option>
                     </select>
                   </div>
                 </div>
